--- a/src/app/Modules/news/news.component.html
+++ b/src/app/Modules/news/news.component.html
@@ -3,7 +3,7 @@
         <div class="container__line"></div>
         <div class="container__path flex justify-content-start">
             <div class="container__home">
-                <a routerLink="/">Home</a>
+                <a class="container__link" routerLink="/">Home</a>
             </div>
             <div class="container__angle">
                 <img src="../../../assets/img-aboutus/Angle.png" alt="angle">
@@ -16,10 +16,9 @@
             and are always confident that your order will be delivered at the right time to the right place.</p>
         <app-banners></app-banners>
         <div class="list">
-            <ul>
+            <ul class="list__ul">
                 <li *ngFor="let item of collection | paginate: { itemsPerPage: 4, currentPage: p }">
                     <div class="container__info">
-                        {{item.id}}
                         <div class="container__date">
                             {{item.date}}
                         </div>
