--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -3,7 +3,7 @@
         <div class="container__line"></div>
         <div class="container__path flex justify-content-start">
             <div class="container__home">
-                <a routerLink="/">Home</a>
+                <a class="container__link" routerLink="/">Home</a>
             </div>
             <div class="container__angle">
                 <img src="../../../../assets/img-aboutus/Angle.png" alt="angle">
@@ -14,9 +14,10 @@
             <div class="container__angle">
                 <img src="../../../../assets/img-aboutus/Angle.png" alt="angle">
             </div>
-            <div class="container__news">News delivery method</div>
+            <div class="container__news">New delivery method</div>
+            <div class="container__new">New delivery meth...</div>
         </div>
-        <div class="container__titl">News delivery method</div>
+        <div class="container__titl">New delivery method</div>
         <p class="container__text">For several years now, our company has been delighting customers with the delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
