--- a/src/app/Modules/search/search.component.html
+++ b/src/app/Modules/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="container">
         <div class="container__line"></div>
-        <div class="container__titles">Site search</div>
+        <div class="container__titles title">Site search</div>
         <div class="container__search">
             <div class="p-input-icon-right">
                 <input type="text" class="p-inputtext-lg" pInputText placeholder="Enter your search request" />
