--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,15 +5,17 @@
             <div class="footer__catalog">
                 <p class="footer__title">Catalog</p>
                 <ul class="footer__list flex justify-content-between">
-                    <div>
-                        <li><a href="">Fresh flowers</a></li>
-                        <li><a href="">Indoor plants</a></li>
-                        <li><a href="">Planting material</a></li>
+                    <div class="footer__first-list">
+                        <li class="footer__li"><a class="footer__li-link" href="">Fresh flowers</a></li>
+                        <li class="footer__li"><a class="footer__li-link" href="">Indoor plants</a></li>
+                        <li class="footer__li"><a class="footer__li-link" href="">Planting material</a></li>
                     </div>
-                    <div>
-                        <li><a href="">Floral accessories</a></li>
-                        <li><a href="">Compositions made of artificial materials and dried flowers</a></li>
-                        <li><a href="">Landscape design</a></li>
+                    <div class="footer__second-list">
+                        <li class="footer__li"><a class="footer__li-link" href="">Floral accessories</a></li>
+                        <li class="footer__li"><a class="footer__li-link" href="">Compositions made of artificial
+                                materials and dried
+                                flowers</a></li>
+                        <li class="footer__li"><a class="footer__li-link" href="">Landscape design</a></li>
                     </div>
                 </ul>
             </div>
@@ -21,9 +23,9 @@
                 <div class="footer__store">
                     <p class="footer__title">Store</p>
                     <ul class="footer__list">
-                        <li><a routerLink="/aboutus">About us</a></li>
-                        <li><a routerLink="/news">News</a></li>
-                        <li><a routerLink="contacts">Contacts</a></li>
+                        <li class="footer__li link"><a class="footer__li-link" routerLink="/aboutus">About us</a></li>
+                        <li class="footer__li"><a class="footer__li-link" routerLink="/news">News</a></li>
+                        <li class="footer__li"><a class="footer__li-link" routerLink="contacts">Contacts</a></li>
                     </ul>
                 </div>
                 <div class="footer__media ">
