create contacts page

--- a/src/app/Modules/contacts/contacts.component.html
+++ b/src/app/Modules/contacts/contacts.component.html
@@ -1,1 +1,46 @@
-<p>contacts works!</p>
+<div class="wrapper">
+    <div class="container">
+        <div class="container__line"></div>
+        <div class="container__path flex justify-content-start">
+            <div class="container__home">
+                <a class="container__link" routerLink="/">Home</a>
+            </div>
+            <div class="container__angle">
+                <img src="../../../assets/img-aboutus/Angle.png" alt="angle">
+            </div>
+            <div class="container__contacts">Contacts</div>
+        </div>
+        <div class="container__img">
+            <img class="image-map" src="../../../assets/img-contacts/marker.png" alt="map">
+        </div>
+        <div class="container__titl">Contacts</div>
+        <p class="container__text">For several years now, our company has been delighting customers with the delivery of
+            flowers and congratulations. We
+            are really proud of the clear and well-coordinated work of our employees and are always confident that your
+            order will
+            be delivered at the right time to the right place.</p>
+        <div class="container__contacts1">
+            <p class="container__street">Kalvariyskaya str., 19, room 45</p>
+            <p class="container__number">+375 29 123-45-67</p>
+            <p class="container__mail">info@flowershop.by</p>
+        </div>
+        <div class="container__form">
+            <div class="container__title">Contact us</div>
+            <form action="" method="post">
+                <div class="container__name">
+                    <input type="text" id="inputName" required>
+                    <label class="container__input-name" for="inputName">Your name</label>
+                </div>
+                <div class="container__phone-number">
+                    <input type="number" id="inputNumber" required>
+                    <label class="container__input-number" for="inputNumber">Phone number</label>
+                </div>
+                <div class="container__message">
+                    <textarea type="text" id="inputMessage" required></textarea>
+                    <label class="container__input-message" for="inputMessage">Text message</label>
+                </div>
+            </form>
+            <button class="container__button">SEND</button>
+        </div>
+    </div>
+</div>
