--- a/src/app/Modules/banners/banners.component.html
+++ b/src/app/Modules/banners/banners.component.html
@@ -1,4 +1,4 @@
-<div class="container__banner flex justify-content-start ">
+<div class="container__banner">
     <a href="https://www.elinext.com" target="_blank" class="container__delivery flex justify-content-between">
         <div class="container__deliverys">
             <p class=" title">Flower delivery in Minsk</p>
