--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -59,9 +59,9 @@
         margin: 1rem auto 5rem;
     }
     .container__information {
-        margin-left: 5%;
-    }
-    .container__paragraph {
-        margin-right: 5% !important;
+        margin: 0 0 0 5%;
+        .container__paragraph {
+            margin-right: 5%;
+        }
     }
 }
