--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
 }
-$pb: 1rem;
-$pt: 2rem;
-$pw: 1.5rem;
+$pb_1rem: 1rem;
+$pt_2rem: 2rem;
+$pw_1-5rem: 1.5rem;
 $color_white: #fff;
 $color_black: #000;
 $color_lightpink: #ff9eb1;
