--- a/src/app/Modules/aboutus/aboutus.component.html
+++ b/src/app/Modules/aboutus/aboutus.component.html
@@ -17,7 +17,7 @@
         <p class="container__text1">For several years now, our company has been delighting customers with the delivery
             of flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees
             and are always confident that your order will be delivered at the right time to the right place.</p>
-        <div class="container__flowers flex justify-content-start">
+        <div class="container__flowers">
             <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 3.1png.png"
                     alt="flower1"></div>
             <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 4.1.png"
