--- a/src/app/Modules/home/items/items.component.scss
+++ b/src/app/Modules/home/items/items.component.scss
@@ -14,7 +14,7 @@
     @include wihi(25.5rem, 34.4rem);
     border: 1px solid $color_lightgrey;
     border-radius: 10px;
-    padding-bottom: $pb;
+    padding-bottom: $pb_1rem;
     position: relative;
     .image-item {
         display: inline-block;
@@ -34,7 +34,7 @@
         top: 30.5rem;
     }
     .button {
-        display: none;
+        opacity: 0;
     }
 }
 .opacity {
@@ -43,7 +43,7 @@
     text-align: left;
 }
 .container__item:hover {
-    transition: 1s;
+    transition: 0.5s;
     @include wihi(25.5rem, 42.5rem);
     position: absolute;
     z-index: 2;
@@ -51,6 +51,8 @@
     box-sizing: border-box;
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
     .button {
+        transition: 0.5s;
+        opacity: 1;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -92,48 +94,48 @@
 }
 @media (max-width: 820px) {
     .container__items {
-        margin: 0 2rem !important;
+        margin: 0 2rem;
         flex-wrap: wrap;
     }
     .container__wrap {
-        flex: 1 0 17rem;
+        flex: 1 0 30rem;
         margin-bottom: 3rem;
     }
 }
 @media (max-width: 710px) {
     .container__items {
-        margin: 0 $pt !important;
-        display: block !important;
+        margin: 0 $pt_2rem;
+        display: block;
     }
     .container__wrap {
-        margin-bottom: 3rem !important;
-    }
-
-    .container__paragraph {
-        @include font(Montserrat, normal, bold, 1.6rem, 120%, 0em, $color_darkgrey);
-        margin: 2.4rem $pw !important;
-        position: static !important;
+        margin-bottom: 3rem;
     }
     .container__item {
         display: inline-block;
-        position: static !important;
-        opacity: 1 !important;
-        width: 33.5rem !important;
-        height: 23.4rem !important;
+        position: static;
+        opacity: 1;
+        width: 33.5rem;
+        height: 23.4rem;
         background-color: $color_white;
         box-sizing: border-box;
         .image-item {
             float: left;
             width: 10.7rem;
             height: 10.7rem;
-            margin: 2rem !important;
+            margin: 2rem;
         }
         .container__title {
             width: 90%;
             margin-top: 2rem;
         }
+        .container__paragraph {
+            @include font(Montserrat, normal, bold, 1.6rem, 120%, 0em, $color_darkgrey);
+            margin: 2.4rem $pw_1-5rem;
+            position: static;
+        }
         .button {
-            display: flex !important;
+            opacity: 1;
+            display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
@@ -153,23 +155,23 @@
     }
     .container__item:hover {
         display: inline-block;
-        position: static !important;
-        opacity: 1 !important;
-        width: 33.5rem !important;
-        height: 23.4rem !important;
+        position: static;
+        opacity: 1;
+        width: 33.5rem;
+        height: 23.4rem;
         background-color: $color_white;
         .image-item {
             float: left;
             width: 10.7rem;
             height: 10.7rem;
-            margin: 2rem !important;
+            margin: 2rem;
         }
         .container__title {
             width: 90%;
             margin-top: 2rem;
         }
         .button {
-            display: flex !important;
+            display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
