--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper">
     <footer class="footer">
-        <div class="footer__flex flex justify-content-between">
+        <div class="footer__flex">
             <div class="footer__logo"><img id="logo-image" src="../assets/img-home/FlowerShop.png" alt="logo"></div>
             <div class="footer__catalog">
                 <p class="footer__title">Catalog</p>
-                <ul class="footer__list flex justify-content-between">
+                <ul class="footer__list">
                     <div class="footer__first-list">
                         <li class="footer__li"><a class="footer__li-link" href="">Fresh flowers</a></li>
                         <li class="footer__li"><a class="footer__li-link" href="">Indoor plants</a></li>
@@ -19,7 +19,7 @@
                     </div>
                 </ul>
             </div>
-            <div class="footer__block flex justify-content-between">
+            <div class="footer__block">
                 <div class="footer__store">
                     <p class="footer__title">Store</p>
                     <ul class="footer__list">
