--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,8 +33,20 @@
                         <span class="header__quantity">10</span>
                     </a>
                 </li>
-                <li class="menu-icon"><a class="header__user icon " (click)='toggleUser($event)' routerLink=""
-                        routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"></a></li>
+                <li class="menu-icon icon-user"><a class="header__user icon " (click)='toggleUser($event)' routerLink=""
+                        routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"></a>
+                    <ul class="user" [hidden]="isMenu">
+                        <li class="user__li">
+                            <a href="">
+                                <span class="user__text">MY ORDERS</span>
+                                <p class="user__number"> <span class="user__numb">10</span></p>
+                            </a>
+                        </li>
+                        <li class="user__li"><a href="" class="user__text">MANAGE MY ACCOUNT</a></li>
+                        <div class="line"></div>
+                        <li class="user__li"><a href="" class="user__text">LOG OUT</a></li>
+                    </ul>
+                </li>
             </div>
         </ul>
     </div>
@@ -53,17 +65,5 @@
             </li>
         </ul>
     </div>
-    <div class="users">
-        <ul class="user" [hidden]="isMenu">
-            <li class="user__li">
-                <a href="">
-                    <span class="user__text">MY ORDERS</span>
-                    <p class="user__number"> <span class="user__numb">10</span></p>
-                </a>
-            </li>
-            <li class="user__li"><a href="" class="user__text">MANAGE MY ACCOUNT</a></li>
-            <div class="line"></div>
-            <li class="user__li"><a href="" class="user__text">LOG OUT</a></li>
-        </ul>
-    </div>
+
 </header>
